--- a/index.html
+++ b/index.html
@@ -1,17 +1,58 @@
-
-
-
-
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfólio - Maythê Cristina Medeiros</title>
     <link rel="stylesheet" href="style.css">
-    <script src="scripts.js" defer></script>
+    
 </head>
 <body>
-    <div id="placeholder"></div>
+    <div class="container">
+        <div class="profile-image">
+            <img src="may.jpg" alt="Maythê Cristina Medeiros">
+        </div>
+        <h1>Maythê Cristina Medeiros</h1>
+        <p>Tenho 17 anos, nasci e moro em Joinville, Santa Catarina, Brasil e 
+            <br>
+            atualmente estou cursando Tecnologia da Informação no CEDUP. 
+            <br>
+            Sou uma pessoa motivada e focada, sempre em busca de novos 
+            <br>
+            desafios que possam expandir meus conhecimentos e habilidades.
+        </p>
+        <div class="social-links">
+            <a href="#">
+                <i class="fas fa-envelope"></i>
+            </a>
+            <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+        <div class="links">
+            <a href="https://github.com/maythemedeiros/maythemedeiros.github.io">
+              <button>Meu Repositório</button>
+            </a>
+            <a href="meus_projetos.html">
+              <button>Meus Projetos</button>
+            </a>
+            <a href="creditos.html">
+            <button>Créditos</button>
+            </a>
+            <a href="contato.html">
+              <button>Contato</button>
+            </a>
+          </div>
+           
+        <div class="credits">
+            <p>Desenvolvido por Maythê Cristina Medeiros</p>
+            <p>Template baseado em <a href="https://github.com/username/template">Template Name</a></p>
+        </div>
+    </div>
+    <script src="script.js"></script>
+  
 </body>
 </html>
