--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="">
-        <img src=""alt="">
+        <img src="cep.png"alt="">
         <h1>Conexão Assíncrona CEP</h1>
         <div class="Conexão Assíncrona CEP">
             <a href="file:///U:/portf%C3%B3lio%20ass%C3%ADncrona/index%20(4).html"target="_blanck">ver projetos</a>
