--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -10,7 +10,7 @@
         <img src="cep.png"alt="">
         <h1>Conexão Assíncrona CEP</h1>
         <div class="Conexão Assíncrona CEP">
-            <a href="file:///U:/portf%C3%B3lio%20ass%C3%ADncrona/index%20(4).html"target="_blanck">ver projetos</a>
+            <a href="/projetos/portfólio assíncrona/index (4).html"target="_blanck">ver projetos</a>
         </div>
     </div>
     
