--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -14,9 +14,17 @@
 
             <div class="">
                 <img src="maps.png"alt="">
-                <h1>Projetos maps CEP</h1>
+                <h1>Projetos maps</h1>
                 <div class="portfólio">
                     <a href="/projetos/portfólio maps/GoogleMaps.html"target="_blanck">ver projetos</a>
+        
+            <div class="">
+                <img src="maps.png"alt="">
+                <h1>Projetos maps</h1>
+                <div class="portfólio">
+                    <a href="/projetos/portfólio maps/GoogleMaps.html"target="_blanck">ver projetos</a>
+                       </div>
+                    </div>
                 </div>
             </div>
         </div>
