--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -23,6 +23,14 @@
                 <h1>Projetos formulário</h1>
                 <div class="portfólio">
                     <a href="/projetos/portifólio formulário/index.html"target="_blanck">ver projetos</a>
+
+                    <div class="">
+                        <img src="jogo.png"alt="">
+                        <h1>Projetos jogo da velha</h1>
+                        <div class="portfólio">
+                            <a href="/projetos/portifólio jogo da velha/index.html"target="_blanck">ver projetos</a>
+                               </div>
+                            </div>
                        </div>
                     </div>
                 </div>
