--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -14,21 +14,37 @@
 
             <div class="">
                 <img src="maps.png"alt="">
-                <h1>Projetos maps</h1>
+                <h1>Projeto maps</h1>
                 <div class="portfólio">
                     <a href="/projetos/portfólio maps/GoogleMaps.html"target="_blanck">ver projetos</a>
         
             <div class="">
                 <img src="formulario.png"alt="">
-                <h1>Projetos formulário</h1>
+                <h1>Projeto formulário</h1>
                 <div class="portfólio">
                     <a href="/projetos/portifólio formulário/index.html"target="_blanck">ver projetos</a>
 
                     <div class="">
                         <img src="jogo.png"alt="">
-                        <h1>Projetos jogo da velha</h1>
+                        <h1>Projeto jogo da velha</h1>
                         <div class="portfólio">
                             <a href="/projetos/portifólio jogo da velha/index.html"target="_blanck">ver projetos</a>
+
+                            <div class="">
+                                <img src="jquery.png"alt="">
+                                <h1>Projeto jquery</h1>
+                                <div class="portfólio">
+                                    <a href="/projetos/portifólio jquery/animacao_jquery.html"target="_blanck">ver projetos</a>
+
+                                    <div class="">
+                                        <img src="olx.png"alt="">
+                                        <h1>Projeto olx</h1>
+                                        <div class="portfólio">
+                                            <a href="/projetos/portifólio olx/index.html"target="_blanck">ver projetos</a>
+                                               </div>
+                                            </div>
+                                       </div>
+                                    </div>
                                </div>
                             </div>
                        </div>
