--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -5,6 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus projetos</title>
 </head>
+<style>
+    body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+}
+
+.portfólio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 20px;
+}
+
+.portfólio > div {
+  margin: 20px;
+  width: 250px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.portfólio > div img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+
+.portfólio > div h1 {
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+.portfólio > div a {
+  text-decoration: none;
+  color: #337ab7;
+}
+
+.portfólio > div a:hover {
+  color: #23527c;
+}
+
+.portfólio > div:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+</style>
 <body>
     <div class="">
         <img src="cep.png"alt="">
