--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -6,19 +6,27 @@
     <title>Meus projetos</title>
 </head>
 <style>
-    body {
+ /* Estilos gerais */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
 }
 
-.portfólio {
+/* Estilos para os projetos */
+.projetos {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 20px;
+  margin: 40px;
 }
 
-.portfólio > div {
+.projetos > div {
   margin: 20px;
   width: 250px;
   background-color: #fff;
@@ -26,31 +34,34 @@
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
 }
 
-.portfólio > div img {
+.projetos > div:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+}
+
+.projetos img {
   width: 100%;
   height: 150px;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
 }
 
-.portfólio > div h1 {
+.projetos h1 {
   font-size: 18px;
   margin-top: 10px;
+  color: #333;
 }
 
-.portfólio > div a {
+.projetos a {
   text-decoration: none;
   color: #337ab7;
 }
 
-.portfólio > div a:hover {
+.projetos a:hover {
   color: #23527c;
-}
-
-.portfólio > div:hover {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 </style>
 <body>
