--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -6,63 +6,59 @@
     <title>Meus projetos</title>
 </head>
 <style>
- /* Estilos gerais */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+<style>
+  /* Estilos gerais */
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+  }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
-}
+  /* Estilos para os projetos */
+ .portfólio {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 40px;
+  }
 
-/* Estilos para os projetos */
-.projetos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 40px;
-}
+ .portfólio > div {
+    margin: 20px;
+    width: 250px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
 
-.projetos > div {
-  margin: 20px;
-  width: 250px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
-}
+ .portfólio img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+  }
 
-.projetos > div:hover {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-  transform: scale(1.05);
-}
+ .portfólio h1 {
+    font-size: 18px;
+    margin-top: 10px;
+    color: #333;
+  }
 
-.projetos img {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 10px 10px 0 0;
-}
+ .portfólio a {
+    text-decoration: none;
+    color: #337ab7;
+  }
 
-.projetos h1 {
-  font-size: 18px;
-  margin-top: 10px;
-  color: #333;
-}
+ .portfólio a:hover {
+    color: #23527c;
+  }
 
-.projetos a {
-  text-decoration: none;
-  color: #337ab7;
-}
-
-.projetos a:hover {
-  color: #23527c;
-}
+  /* Efeito de hover */
+ .portfólio > div:hover {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+  }
+</style>
 </style>
 <body>
     <div class="">
