--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -1,150 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus projetos</title>
-</head>
     <style>
-      /* Estilos gerais */
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f5f5f5;
-      }
+        /* Estilos gerais */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
 
-      /* Estilos para os projetos */
-     .portfólio {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 40px;
-      }
+        /* Estilos para os projetos */
+        .portfólio {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin: 40px;
+        }
 
-     .portfólio > div {
-        margin: 20px;
-        width: 250px;
-        background-color: #fff;
-        border: 1px solid #ddd;
-        border-radius: 10px;
-        padding: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
+        .portfólio>div {
+            margin: 20px;
+            width: 250px;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-     .portfólio img {
-        width: 100%;
-        height: 150px;
-        object-fit: cover;
-        border-radius: 10px 10px 0 0;
-      }
+        .portfólio img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 10px 10px 0 0;
+        }
 
-     .portfólio h1 {
-        font-size: 18px;
-        margin-top: 10px;
-        color: #333;
-      }
+        .portfólio h1 {
+            font-size: 18px;
+            margin-top: 10px;
+            color: #333;
+        }
 
-     .portfólio a {
-        text-decoration: none;
-        color: #337ab7;
-      }
+        .portfólio a {
+            text-decoration: none;
+            color: #337ab7;
+        }
 
-     .portfólio a:hover {
-        color: #23527c;
-      }
+        .portfólio a:hover {
+            color: #23527c;
+        }
 
-      /* Efeito de hover */
-     .portfólio > div:hover {
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-        transform: scale(1.05);
-      }
+        /* Efeito de hover */
+        .portfólio>div:hover {
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            transform: scale(1.05);
+        }
     </style>
 </head>
-<body>
-    <div class="portfólio">
-        <div>
-            <img src="cep.png" alt="">
-            <h1>Conexão Assíncrona CEP</h1>
-            <a href="/projetos/portfólio assíncrona/index (4).html" target="_blank">ver projetos</a>
-        </div>
-        <div>
-            <img src="maps.png" alt="">
-            <h1>Projeto maps</h1>
-            <a href="/projetos/portfólio maps/GoogleMaps.html" target="_blank">ver projetos</a>
-        </div>
-        <div>
-            <img src="formulario.png" alt="">
-            <h1>Projeto formulário</h1>
-            <a href="/projetos/portifólio formulário/index.html" target="_blank">ver projetos</a>
-        </div>
-    </div>
-    <div class="portfólio">
-        <div>
-            <img src="jogo.png" alt="">
-            <h1>Projeto jogo da velha</h1>
-            <a href="/projetos/portifólio jogo da velha/index.html" target="_blank">ver projetos</a>
-        </div>
-        <div>
-            <img src="jquery.png" alt="">
-            <h1>Projeto jquery</h1>
-            <a href="/projetos/portifólio jquery/animacao_jquery.html" target="_blank">ver projetos</a>
-        </div>
-        <div>
-            <img src="olx.png" alt="">
-            <h1>Projeto olx</h1>
-            <a href="/projetos/portifólio olx/index.html" target="_blank">ver projetos</a>
-        </div>
-    </div>
-</body>
-</html>
-</style>
+
 <body>
     <div class="">
-        <img src="cep.png"alt="">
+        <img src="cep.png" alt="">
         <h1>Conexão Assíncrona CEP</h1>
         <div class="portfólio">
-            <a href="/projetos/portfólio assíncrona/index (4).html"target="_blanck">ver projetos</a>
+            <a href="/projetos/portfólio assíncrona/index (4).html" target="_blanck">ver projetos</a>
 
             <div class="">
-                <img src="maps.png"alt="">
+                <img src="maps.png" alt="">
                 <h1>Projeto maps</h1>
                 <div class="portfólio">
-                    <a href="/projetos/portfólio maps/GoogleMaps.html"target="_blanck">ver projetos</a>
-        
-            <div class="">
-                <img src="formulario.png"alt="">
-                <h1>Projeto formulário</h1>
-                <div class="portfólio">
-                    <a href="/projetos/portifólio formulário/index.html"target="_blanck">ver projetos</a>
+                    <a href="/projetos/portfólio maps/GoogleMaps.html" target="_blanck">ver projetos</a>
 
                     <div class="">
-                        <img src="jogo.png"alt="">
-                        <h1>Projeto jogo da velha</h1>
+                        <img src="formulario.png" alt="">
+                        <h1>Projeto formulário</h1>
                         <div class="portfólio">
-                            <a href="/projetos/portifólio jogo da velha/index.html"target="_blanck">ver projetos</a>
+                            <a href="/projetos/portifólio formulário/index.html" target="_blanck">ver projetos</a>
 
                             <div class="">
-                                <img src="jquery.png"alt="">
-                                <h1>Projeto jquery</h1>
+                                <img src="jogo.png" alt="">
+                                <h1>Projeto jogo da velha</h1>
                                 <div class="portfólio">
-                                    <a href="/projetos/portifólio jquery/animacao_jquery.html"target="_blanck">ver projetos</a>
+                                    <a href="/projetos/portifólio jogo da velha/index.html" target="_blanck">ver
+                                        projetos</a>
 
                                     <div class="">
-                                        <img src="olx.png"alt="">
-                                        <h1>Projeto olx</h1>
+                                        <img src="jquery.png" alt="">
+                                        <h1>Projeto jquery</h1>
                                         <div class="portfólio">
-                                            <a href="/projetos/portifólio olx/index.html"target="_blanck">ver projetos</a>
-                                               </div>
+                                            <a href="/projetos/portifólio jquery/animacao_jquery.html"
+                                                target="_blanck">ver projetos</a>
+
+                                            <div class="">
+                                                <img src="olx.png" alt="">
+                                                <h1>Projeto olx</h1>
+                                                <div class="portfólio">
+                                                    <a href="/projetos/portifólio olx/index.html" target="_blanck">ver
+                                                        projetos</a>
+                                                </div>
                                             </div>
-                                       </div>
+                                        </div>
                                     </div>
-                               </div>
+                                </div>
                             </div>
-                       </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
 </body>
+
 </html>
