--- a/creditos.html
+++ b/creditos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato</title>
+    <title>Créditos</title>
     <style>
         body{
             position: absolute;
@@ -14,7 +14,7 @@
             font-family: "Poppins", sans-serif; ;
         }
 
-        .contact-box {
+        .creditos-box {
             background: radial-gradient(circle, rgba(255,232,137,1) 0%, rgba(233,143,219,1) 100%);
             padding: 30px;
             border-radius: 20px;
@@ -34,9 +34,8 @@
     </style>
 </head>
 <body>
-    <div class="contact-box">
-        <h2>Contato</h2>
-        <p>Telefone: (47) 99604-3373</p>
-        <p>Instagram: maythe_medeiros</p>
-        <p>Email: maythecmedeiros@gmail.com</p>
+    <div class="creditos-box">
+        <h2>Créditos</h2>
+        <p>Projeto jogo da velha - créditos: Gabrielli, Maythê, Herika, Nicolly, Felipe.</p>
+        <p>Demais projetos - Maythê e Gabrielli.</p>
     </div>
